# DVC_workbench

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO.md  docker-compose.prebuilt.yml  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements.txt  run.bat  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml
.streamlit/: config.toml
app/: streamlit_app.py
app/components/: __init__.py  metadata_tables.py  workflow.py
data/examples/: Cohort23_events.csv  Cohort31_events.csv  Cohort32_events.csv  E_animal_loc__index_smoothed.csv  PartnerC_cohort1_animal_loc_index_smoothed.csv  WT-Group_animal_loc__index_smoothed.csv  WT-Group_events.csv  Xp41_events.csv  cohort2_animal_loc__index_smoothed.csv  cohort2_events.csv
docs/: AGENT.md  AI_DECLARATION.md  ANALYTICS_AND_LLM_REVIEW.md
scripts/: container_smoke.py
src/dvc_behavior/: __init__.py  aggregation.py  alignment.py  analysis.py  api_adapter.py  baseline.py  circadiem.py  config.py  events.py  exclusions.py  export.py  insights.py  io.py  light_dark.py  literature.py  metadata.py  parsing.py  provenance.py  qc.py  quality.py  reporting.py  schemas.py
tests/: conftest.py  test_alignment.py  test_analysis.py  test_analysis_advanced.py  test_app_smoke.py  test_baseline.py  test_circadiem.py  test_events.py  test_exclusions.py  test_export.py  test_insights.py  test_insights_agent.py  test_light_dark.py  test_literature.py  test_parsing.py  test_pipeline_e2e.py  test_provenance.py  test_qc.py  test_quality.py  test_reporting.py  test_schemas.py
