[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvc-behavior"
version = "0.1.0"
description = "DVC Behavioral Preprocessing Workbench – Digital Ventilated Cage behavioral data preprocessing"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Damien Huzard", email = "damien@metadatapp.net" },
]
maintainers = [
    { name = "Damien Huzard", email = "damien@metadatapp.net" },
]
keywords = [
    "neuroscience",
    "circadian",
    "behavior",
    "digital ventilated cage",
    "home-cage monitoring",
    "preprocessing",
    "streamlit",
    "chronobiology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "streamlit>=1.32",
    "plotly>=5.18",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
    "pytz>=2023.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]
# Optional AI circadian scoring (Circadiem): HTTP egress + static PNG rendering.
# Imported lazily; the default workbench path never requires these.
ai = [
    "requests>=2.31",
    "kaleido>=0.2",
]

[project.urls]
Homepage = "https://github.com/dhuzard/DVC_workbench"
Repository = "https://github.com/dhuzard/DVC_workbench"
Issues = "https://github.com/dhuzard/DVC_workbench/issues"
Changelog = "https://github.com/dhuzard/DVC_workbench/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--capture=sys"
